--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 </head>
 
 <body>
+    <script>
+        let arr = [{
+            link: './ts/ts-01.ts',
+            name: 'ts 数据类型'
+        }, {
+            link: './ts/ts-02.ts',
+            name: 'ts 函数'
+        }, {
+            link: './ts/ts-03.ts',
+            name: 'ts 类'
+        }]
+    </script>
     <!-- <script src="./js/hello.js"></script> -->
     <script src="./js/second.js"></script>
 </body>
