--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         }]
     </script>
     <!-- <script src="./js/hello.js"></script> -->
-    <script src="./js/second.js"></script>
+    <!-- <script src="./js/second.js"></script> -->
+    <script src="./js/ts-03.js"></script>
+
 </body>
 
 </html>
