删除冗余生成的代码

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </script>
     <!-- <script src="./js/hello.js"></script> -->
     <!-- <script src="./js/second.js"></script> -->
-    <script src="./js/ts-03.js"></script>
+    <!-- <script src="./js/ts-03.js"></script> -->
+    <script src="./js/ts-04.js"></script>
 
 </body>
 
