add props interface

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <!-- <script src="./js/hello.js"></script> -->
     <!-- <script src="./js/second.js"></script> -->
     <!-- <script src="./js/ts-03.js"></script> -->
-    <script src="./js/ts-04.js"></script>
+    <!-- <script src="./js/ts-04.js"></script> -->
+    <script src="./js/ts-05.js"></script>
 
 </body>
 
