add function interface

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- <script src="./js/second.js"></script> -->
     <!-- <script src="./js/ts-03.js"></script> -->
     <!-- <script src="./js/ts-04.js"></script> -->
-    <!-- <script src="./js/ts-05.js"></script> -->
-    <script src="./js/answer.js"></script>
+    <script src="./js/ts-05.js"></script>
+    <!-- <script src="./js/answer.js"></script> -->
 
 </body>
 
