--- a/index.html
+++ b/index.html
@@ -18,14 +18,24 @@
             name: 'ts 函数'
         }, {
             link: './ts/ts-03.ts',
-            name: 'ts 类'
+            name: 'es5 构造函数实现类'
+        }, {
+            link: './ts/ts-04.ts',
+            name: 'ts 类的修饰符 继承 静态方法属性 多态 抽象类'
+        }, {
+            link: './ts/ts-05.ts',
+            name: 'ts 接口 属性类型接口 函数类型接口'
+        }, {
+            link: './ts/ts-06.ts',
+            name: 'ts 接口 可索引类型接口 类类型接口'
         }]
     </script>
     <!-- <script src="./js/hello.js"></script> -->
     <!-- <script src="./js/second.js"></script> -->
     <!-- <script src="./js/ts-03.js"></script> -->
     <!-- <script src="./js/ts-04.js"></script> -->
-    <script src="./js/ts-05.js"></script>
+    <!-- <script src="./js/ts-05.js"></script> -->
+    <script src="./js/ts-06.js"></script>
     <!-- <script src="./js/answer.js"></script> -->
 
 </body>
