--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     </script>
     <!-- <script src="./js/hello.js"></script> -->
     <!-- <script src="./js/second.js"></script> -->
+    <script src="./js/ts-02.js"></script>
     <!-- <script src="./js/ts-03.js"></script> -->
     <!-- <script src="./js/ts-04.js"></script> -->
     <!-- <script src="./js/ts-05.js"></script> -->
-    <script src="./js/ts-06.js"></script>
+    <!-- <script src="./js/ts-06.js"></script> -->
     <!-- <script src="./js/answer.js"></script> -->
 
 </body>
